assets/style/amber-mobile.css
body {
	margin: 8px;
	padding: 0px;
}

.page-body {
	max-width: 100%;
}

.parent {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: 1fr;
	grid-column-gap: 0px;
	grid-row-gap: 10px; 
	max-width: 100%;
	margin: auto;
} 

.div1 {
	grid-area: 1 / 1 / 2 / 2; 
	max-height: 350px;
}
	
.div2 { grid-area: 2 / 1 / 3 / 2; } 

.icon {
	margin: auto;
	display: block;
	max-height: 100%;
}

